# django-auditlog-extra

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
auditlog_extra/: apps.py  context.py  graphene_decorators.py  middleware.py  mixins.py  signals.py  utils.py
tests/: models.py  schema.py  settings.py  test_context.py  test_decorators.py  test_middleware.py  test_mixins.py  test_signals.py  test_utils.py
